z-index correction; adding borders and transparent background.

--- a/xadmin/static/xadmin/css/xadmin.responsive.css
+++ b/xadmin/static/xadmin/css/xadmin.responsive.css
@@ -75,18 +75,20 @@
 #top-nav .navbar-nav {
   float: none;
 }
+
 #left-side {
   min-height: 0px;
   position: fixed;
-  top: 65px;
+  top: 5px;
   left: 0px;
   bottom: 0px;
-  background: #FFF;
-  z-index: 999;
+  z-index: 1035;
   overflow: auto;
+  background-color: rgba(255, 255, 255, 0.75);
   display: none;
   width: 70%;
 }
+
 #body-content.show_menu #left-side {
   display: block;
 }
